--- a/.azure-pipelines/release-pipeline.yml
+++ b/.azure-pipelines/release-pipeline.yml
@@ -71,7 +71,9 @@ extends:
               displayName: Use node 10
               inputs:
                 versionSpec: "10.x"
-        
+            - script: npm i -g npm@8.19.4 --force
+              displayName: Use npm version 8.19.4
+            
             - bash: |
                 echo '//registry.npmjs.org/:_authToken=$(npm-automation.token)' > .npmrc
                 # Run the npm command and capture the output
