--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "app-root-path": "1.0.0",
     "archiver": "2.0.3",
     "azure-devops-node-api": "^14.0.0",
-    "clipboardy": "~1.2.3",
+    "clipboardy": "^4.0.0",
     "colors": "~1.3.0",
     "glob": "7.1.2",
     "jju": "^1.4.0",
@@ -58,7 +58,7 @@
     "@types/xml2js": "0.0.27",
     "ncp": "^2.0.0",
     "rimraf": "^2.6.1",
-    "typescript": "^3.2.2"
+    "typescript": "^5.7.0"
   },
   "engines": {
     "node": ">=8.0.0"
