--- a/.azure-pipelines/common-steps.yml
+++ b/.azure-pipelines/common-steps.yml
@@ -8,7 +8,7 @@ steps:
   - task: UseNode@1
     displayName: Use Node 18
     inputs:
-      versionSpec: "18.x"
+      version: "18.x"
 
   - task: NpmAuthenticate@0
     inputs:
