--- a/packages/tfs-mock-server/package.json
+++ b/packages/tfs-mock-server/package.json
@@ -11,7 +11,8 @@
     "build": "tsc",
     "clean": "rimraf lib",
     "prepublishOnly": "npm run clean && npm run build",
-    "test": "echo \"No tests specified for this package\"",
+    "test": "npm run build && mocha test/**/*.test.js",
+    "test:compatibility": "npm run build && mocha lib/test/compatibility.test.js",
     "start": "node bin/start-mock-server.js"
   },
   "keywords": [
@@ -32,7 +33,9 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@types/mocha": "^10.0.10",
     "@types/node": "^18.0.0",
+    "mocha": "^11.7.1",
     "rimraf": "^5.0.0",
     "typescript": "^5.0.0"
   },
