--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tfx-cli",
-  "version": "0.21.5",
+  "version": "0.21.3",
   "description": "CLI for Azure DevOps Services and Team Foundation Server",
   "repository": {
     "type": "git",
@@ -39,6 +39,7 @@
     "test:server-integration-extension": "npm run build:tests && mocha _tests/tests/server-integration-extension.js"
   },
   "dependencies": {
+    "app-root-path": "1.0.0",
     "archiver": "2.0.3",
     "azure-devops-node-api": "^14.0.0",
     "clipboardy": "^4.0.0",
@@ -48,11 +49,15 @@
     "json-in-place": "^1.0.1",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
+    "minimist": "^1.2.6",
     "mkdirp": "^1.0.4",
     "onecolor": "^2.5.0",
     "os-homedir": "^1.0.1",
     "prompt": "^1.3.0",
+    "read": "^1.0.6",
     "shelljs": "^0.8.5",
+    "tmp": "^0.2.4",
+    "tracer": "0.7.4",
     "util.promisify": "^1.0.0",
     "uuid": "^3.0.1",
     "validator": "^13.7.0",
@@ -67,17 +72,17 @@
     "@types/jszip": "~3.1.2",
     "@types/lodash": "~4.14.110",
     "@types/mkdirp": "^1.0.2",
-    "@types/mocha": "^10.0.10",
+    "@types/mocha": "^10.0.0",
     "@types/node": "8.10.66",
     "@types/shelljs": "^0.8.11",
     "@types/uuid": "^2.0.29",
     "@types/validator": "^4.5.27",
     "@types/winreg": "^1.2.29",
     "@types/xml2js": "0.0.27",
-    "mocha": "^11.7.1",
+    "mocha": "^10.2.0",
     "ncp": "^2.0.0",
     "rimraf": "^2.6.1",
-    "typescript": "^5.7.0"
+    "typescript": "^4.9.5"
   },
   "engines": {
     "node": ">=8.0.0"
