--- a/.azure-pipelines/common-steps.yml
+++ b/.azure-pipelines/common-steps.yml
@@ -18,6 +18,12 @@ steps:
     displayName: Use npm version 8.19.4
 
   - bash: |
+      cd packages/tfs-mock-server
+      npm ci
+      npm run build
+    displayName: Install and Build Mock Server
+
+  - bash: |
       npm ci
       npm run build
     displayName: Build TFX CLI
