--- a/package.json
+++ b/package.json
@@ -19,23 +19,23 @@
     "prepublishOnly": "npm run build",
     "build:tests": "tsc -p tsconfig.tests.json",
     "postbuild:tests": "ncp tests/build-samples _tests/build-samples && ncp tests/extension-samples _tests/extension-samples",
-    "test": "npm run build && npm run build:tests && mocha _tests/tests/**/*.js",
-    "test:ci": "npm run build && npm run build:tests && mocha _tests/tests/**/*.js --reporter xunit --reporter-options output=test-results.xml",
-    "test:build-commands": "npm run build && npm run build:tests && mocha _tests/tests/build-commands.js",
-    "test:build-task-templates": "npm run build && npm run build:tests && mocha _tests/tests/build-task-templates.js",
-    "test:build-task-validation": "npm run build && npm run build:tests && mocha _tests/tests/build-task-validation.js",
-    "test:commandline": "npm run build && npm run build:tests && mocha _tests/tests/commandline.js",
-    "test:extension-commands": "npm run build && npm run build:tests && mocha _tests/tests/extension-commands.js",
-    "test:extension-advanced": "npm run build && npm run build:tests && mocha _tests/tests/extension-advanced.js",
-    "test:extension-complex": "npm run build && npm run build:tests && mocha _tests/tests/extension-complex.js",
-    "test:extension-task-validation": "npm run build && npm run build:tests && mocha _tests/tests/extension-task-validation.js",
-    "test:server-integration": "npm run build && npm run build:tests && mocha _tests/tests/server-integration-*.js",
-    "test:focused-login": "npm run build && npm run build:tests && mocha _tests/tests/focused-login-test.js",
-    "test:server-integration-login": "npm run build && npm run build:tests && mocha _tests/tests/server-integration-login.js",
-    "test:server-integration-buildtasks": "npm run build && npm run build:tests && mocha _tests/tests/server-integration-buildtasks.js",
-    "test:server-integration-build": "npm run build && npm run build:tests && mocha _tests/tests/server-integration-build.js",
-    "test:server-integration-workitem": "npm run build && npm run build:tests && mocha _tests/tests/server-integration-workitem.js",
-    "test:server-integration-extension": "npm run build && npm run build:tests && mocha _tests/tests/server-integration-extension.js"
+    "test": "npm run build:tests && mocha _tests/tests/**/*.js",
+    "test:ci": "npm run build:tests && mocha _tests/tests/**/*.js --reporter xunit --reporter-options output=test-results.xml",
+    "test:build-commands": "npm run build:tests && mocha _tests/tests/build-commands.js",
+    "test:build-task-templates": "npm run build:tests && mocha _tests/tests/build-task-templates.js",
+    "test:build-task-validation": "npm run build:tests && mocha _tests/tests/build-task-validation.js",
+    "test:commandline": "npm run build:tests && mocha _tests/tests/commandline.js",
+    "test:extension-commands": "npm run build:tests && mocha _tests/tests/extension-commands.js",
+    "test:extension-advanced": "npm run build:tests && mocha _tests/tests/extension-advanced.js",
+    "test:extension-complex": "npm run build:tests && mocha _tests/tests/extension-complex.js",
+    "test:extension-task-validation": "npm run build:tests && mocha _tests/tests/extension-task-validation.js",
+    "test:server-integration": "npm run build:tests && mocha _tests/tests/server-integration-*.js",
+    "test:focused-login": "npm run build:tests && mocha _tests/tests/focused-login-test.js",
+    "test:server-integration-login": "npm run build:tests && mocha _tests/tests/server-integration-login.js",
+    "test:server-integration-buildtasks": "npm run build:tests && mocha _tests/tests/server-integration-buildtasks.js",
+    "test:server-integration-build": "npm run build:tests && mocha _tests/tests/server-integration-build.js",
+    "test:server-integration-workitem": "npm run build:tests && mocha _tests/tests/server-integration-workitem.js",
+    "test:server-integration-extension": "npm run build:tests && mocha _tests/tests/server-integration-extension.js"
   },
   "dependencies": {
     "app-root-path": "1.0.0",
