--- a/package.json
+++ b/package.json
@@ -21,9 +21,6 @@
     "postbuild:tests": "ncp tests/build-samples _tests/build-samples && ncp tests/extension-samples _tests/extension-samples",
     "test": "npm run build:tests && mocha _tests/tests/**/*.js",
     "test:ci": "npm run build:tests && mocha _tests/tests/**/*.js --reporter xunit --reporter-options output=test-results.xml",
-    "test:build-commands": "npm run build:tests && mocha _tests/tests/build-commands.js",
-    "test:build-task-templates": "npm run build:tests && mocha _tests/tests/build-task-templates.js",
-    "test:build-task-validation": "npm run build:tests && mocha _tests/tests/build-task-validation.js",
     "test:commandline": "npm run build:tests && mocha _tests/tests/commandline.js",
     "test:extension-commands": "npm run build:tests && mocha _tests/tests/extension-commands.js",
     "test:extension-advanced": "npm run build:tests && mocha _tests/tests/extension-advanced.js",
@@ -32,10 +29,11 @@
     "test:server-integration": "npm run build:tests && mocha _tests/tests/server-integration-*.js",
     "test:focused-login": "npm run build:tests && mocha _tests/tests/focused-login-test.js",
     "test:server-integration-login": "npm run build:tests && mocha _tests/tests/server-integration-login.js",
-    "test:server-integration-buildtasks": "npm run build:tests && mocha _tests/tests/server-integration-buildtasks.js",
-    "test:server-integration-build": "npm run build:tests && mocha _tests/tests/server-integration-build.js",
     "test:server-integration-workitem": "npm run build:tests && mocha _tests/tests/server-integration-workitem.js",
-    "test:server-integration-extension": "npm run build:tests && mocha _tests/tests/server-integration-extension.js"
+    "test:server-integration-extension": "npm run build:tests && mocha _tests/tests/server-integration-extension.js",
+    "test:build-local": "npm run build:tests && mocha _tests/tests/build-local-tests.js",
+    "test:build-server-integration": "npm run build:tests && mocha _tests/tests/build-server-integration-tests.js",
+    "test:build-commands": "npm run test:build-local && npm run test:build-server-integration"
   },
   "dependencies": {
     "app-root-path": "1.0.0",
