--- a/.azure-pipelines/multi-os-matrix.yml
+++ b/.azure-pipelines/multi-os-matrix.yml
@@ -73,7 +73,31 @@ stages:
               npm i -g npm@10 --force
               npm --version
             fi
-          displayName: Use compatible npm version for Node
+          displayName: Use compatible npm version for Node (Linux/macOS)
+          condition: ne( variables['Agent.OS'], 'Windows_NT' )
+          shell: bash
+        - script: |
+            if "%nodeVersion%" == "10.x" (
+              npm i -g npm@8.19.4 --force
+              npm --version
+            ) else if "%nodeVersion%" == "12.x" (
+              npm i -g npm@8.19.4 --force
+              npm --version
+            ) else if "%nodeVersion%" == "14.x" (
+              npm i -g npm@8.19.4 --force
+              npm --version
+            ) else if "%nodeVersion%" == "16.x" (
+              npm i -g npm@8.19.4 --force
+              npm --version
+            ) else if "%nodeVersion%" == "18.x" (
+              npm i -g npm@8.19.4 --force
+              npm --version
+            ) else (
+              npm i -g npm@10 --force
+              npm --version
+            )
+          displayName: Use compatible npm version for Node (Windows)
+          condition: eq( variables['Agent.OS'], 'Windows_NT' )
         - script: npm ci
           displayName: npm ci
         - script: npm run build
@@ -83,7 +107,20 @@ stages:
             export DEBUG_MOCKSERVER_OUTPUT="$DEBUG_MOCKSERVER_OUTPUT"
             export TFX_TRACE="$TFX_TRACE"
             npm run test:ci
-          displayName: Run Tests
+          displayName: Run Tests (Linux/macOS)
+          condition: ne( variables['Agent.OS'], 'Windows_NT' )
+          shell: bash
+          env:
+            DEBUG_CLI_OUTPUT: $(DEBUG_CLI_OUTPUT)
+            DEBUG_MOCKSERVER_OUTPUT: $(DEBUG_MOCKSERVER_OUTPUT)
+            TFX_TRACE: $(TFX_TRACE)
+        - script: |
+            set DEBUG_CLI_OUTPUT=%DEBUG_CLI_OUTPUT%
+            set DEBUG_MOCKSERVER_OUTPUT=%DEBUG_MOCKSERVER_OUTPUT%
+            set TFX_TRACE=%TFX_TRACE%
+            npm run test:ci
+          displayName: Run Tests (Windows)
+          condition: eq( variables['Agent.OS'], 'Windows_NT' )
           env:
             DEBUG_CLI_OUTPUT: $(DEBUG_CLI_OUTPUT)
             DEBUG_MOCKSERVER_OUTPUT: $(DEBUG_MOCKSERVER_OUTPUT)
