updaing scripts to be cross platform

--- a/package.json
+++ b/package.json
@@ -19,19 +19,19 @@
     "prepublishOnly": "npm run build",
     "build:tests": "tsc -p tsconfig.tests.json",
     "postbuild:tests": "ncp tests/build-samples _tests/build-samples && ncp tests/extension-samples _tests/extension-samples",
-    "test": "npm run build:tests && mocha _tests/tests/**/*.js",
-    "test:ci": "npm run build:tests && mocha _tests/tests/**/*.js --reporter xunit --reporter-options output=test-results.xml",
-    "test:commandline": "npm run build:tests && mocha _tests/tests/commandline.js",
-    "test:server-integration": "npm run build:tests && mocha _tests/tests/server-integration-*.js",
-    "test:focused-login": "npm run build:tests && mocha _tests/tests/focused-login-test.js",
-    "test:server-integration-login": "npm run build:tests && mocha _tests/tests/server-integration-login.js",
-    "test:server-integration-workitem": "npm run build:tests && mocha _tests/tests/server-integration-workitem.js",
-    "test:build-local": "npm run build:tests && mocha _tests/tests/build-local-tests.js",
-    "test:build-server-integration": "npm run build:tests && mocha _tests/tests/build-server-integration-tests.js",
-    "test:build-consolidated": "npm run test:build-local && npm run test:build-server-integration",
-    "test:extension-local": "npm run build:tests && mocha _tests/tests/extension-local-tests.js",
-    "test:extension-server-integration": "npm run build:tests && mocha _tests/tests/extension-server-integration-tests.js",
-    "test:extension-consolidated": "npm run test:extension-local && npm run test:extension-server-integration"
+  "test": "npm run build:tests && mocha \"_tests/tests/**/*.js\"",
+  "test:ci": "npm run build:tests && mocha \"_tests/tests/**/*.js\" --reporter xunit --reporter-options output=test-results.xml",
+  "test:commandline": "npm run build:tests && mocha \"_tests/tests/commandline.js\"",
+  "test:server-integration": "npm run build:tests && mocha \"_tests/tests/server-integration-*.js\"",
+  "test:focused-login": "npm run build:tests && mocha \"_tests/tests/focused-login-test.js\"",
+  "test:server-integration-login": "npm run build:tests && mocha \"_tests/tests/server-integration-login.js\"",
+  "test:server-integration-workitem": "npm run build:tests && mocha \"_tests/tests/server-integration-workitem.js\"",
+  "test:build-local": "npm run build:tests && mocha \"_tests/tests/build-local-tests.js\"",
+  "test:build-server-integration": "npm run build:tests && mocha \"_tests/tests/build-server-integration-tests.js\"",
+  "test:build-consolidated": "npm run test:build-local && npm run test:build-server-integration",
+  "test:extension-local": "npm run build:tests && mocha \"_tests/tests/extension-local-tests.js\"",
+  "test:extension-server-integration": "npm run build:tests && mocha \"_tests/tests/extension-server-integration-tests.js\"",
+  "test:extension-consolidated": "npm run test:extension-local && npm run test:extension-server-integration"
   },
   "dependencies": {
     "app-root-path": "1.0.0",
