Add parameter validation and integration tests with CI integration (#509)
* Adding integration tests

* add test step to ci pipeline

* adding steps to upload test results as well

* removing server side tests as these not E2E tests.

* cleaning up

* Adding additional tests for scenarios needing AZDO server calls

* removing unnecessary flie

* checkin intermiddiate changes

* intermiddiate changes

* more intermittiate changes

* updaing guids

* cleanup

* cleaned up  packages.json files

* adding logging option

* cleaning up the mock server package

* making tests more reliable by making use of precreated files

* simplifying test structure

* simplifyng extension tests

* removing unneccesary assertions

* intermiddiate progress for fixing the assertions

* fixed all the test with proper checks

* removing md file that is not needed

* fixing other test with debug logging and adding debug log variables in the pipeline as well.

* removing secrets

* trying to fix test failure

* few fixes

* updating version

* adding temo pipeline to test this on all os and different node versions

* fixing minor error

* removing variable group

* updating yml

* yml

* updaing scripts to be cross platform

* updating script to remove node 10

* removing unstable tests and corner cases

* cleanup

* Simplifying check for trace as per PR comment

---------

Co-authored-by: Tarun R <>

--- a/.azure-pipelines/common-steps.yml
+++ b/.azure-pipelines/common-steps.yml
@@ -18,9 +18,32 @@ steps:
     displayName: Use npm version 8.19.4
 
   - bash: |
+      cd packages/tfs-mock-server
+      npm ci
+      npm run build
+    displayName: Install and Build Mock Server
+
+  - bash: |
       npm ci
       npm run build
     displayName: Build TFX CLI
+
+  - bash: |
+      export DEBUG_CLI_OUTPUT="$DEBUG_CLI_OUTPUT"
+      export DEBUG_MOCKSERVER_OUTPUT="$DEBUG_MOCKSERVER_OUTPUT"
+      export TFX_TRACE="$TFX_TRACE"
+      npm run test:ci
+    displayName: Run Tests
+    continueOnError: true
+
+  - task: PublishTestResults@2
+    displayName: Publish Test Results
+    condition: succeededOrFailed()
+    inputs:
+      testResultsFormat: 'JUnit'
+      testResultsFiles: 'test-results.xml'
+      failTaskOnFailedTests: true
+      testRunTitle: 'TFX CLI Tests'
 
   # Generate a pipeline artifact so we can publish the package manually if there are issues with automation
   - bash: |
