Removed unwanted files from npm package

--- a/.npmignore
+++ b/.npmignore
@@ -5,7 +5,20 @@ tests/
 _build/tests
 gulpfile.js
 tsconfig.json
+tsconfig.tests.json
+tsd.json
 tmp/
+.devcontainer/
 .vscode/
 .github/
+.azure-pipelines/
+typings/
+_tests/
+test-results.xml
+tfx-cli-*.tgz
+gulp.cmd
+.editorconfig
+.gitattributes
+.gitignore
+.mocharc.json
 .azure-pipelines/
