Upgrade to Node.js 20 and remove deprecated mock server build step
- Update all pipelines to use Node 20.x instead of Node 16.x
- Remove obsolete packages/tfs-mock-server build step from common-steps.yml
- Update package.json engines to require Node >=20.0.0
- Fixes EBADENGINE warnings for shelljs, path-scurry, and system-architecture dependencies
- All 181 tests passing locally

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
         "tmp/": true
     },
 	"editor.insertSpaces": false,
-    "typescript.tsdk": "./node_modules/typescript/lib"
+    "typescript.tsdk": "./node_modules/typescript/lib",
+    "azure-pipelines.1ESPipelineTemplatesSchemaFile": true
 }
