--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tfx-cli",
-  "version": "0.22.7",
+  "version": "0.23.0",
   "description": "CLI for Azure DevOps Services and Team Foundation Server",
   "repository": {
     "type": "git",
@@ -21,7 +21,7 @@
     "build:tests": "tsc -p tsconfig.tests.json",
     "postbuild:tests": "ncp tests/build-samples _tests/build-samples && ncp tests/extension-samples _tests/extension-samples",
     "test": "npm run build:tests && mocha \"_tests/tests/**/*.js\"",
-    "test:ci": "npm run build:tests && mocha \"_tests/tests/**/*.js\" --reporter xunit --reporter-options output=test-results.xml",
+    "test:ci": "npm run build:tests && mocha \"_tests/tests/**/*.js\" --reporter mocha-multi-reporters --reporter-options configFile=.mocha-multi-reporters.json",
     "test:commandline": "npm run build:tests && mocha \"_tests/tests/commandline.js\"",
     "test:server-integration": "npm run build:tests && mocha \"_tests/tests/server-integration-*.js\"",
     "test:focused-login": "npm run build:tests && mocha \"_tests/tests/focused-login-test.js\"",
@@ -79,12 +79,13 @@
     "@types/xml2js": "0.0.27",
     "adm-zip": "^0.5.16",
     "mocha": "^10.2.0",
+    "mocha-multi-reporters": "^1.5.1",
     "ncp": "^2.0.0",
     "rimraf": "^2.6.1",
     "typescript": "^4.9.5"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=20.0.0"
   },
   "author": "Microsoft Corporation",
   "contributors": [
